# openrouter-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  devbox.json  pyproject.toml
.github/workflows/: build-image.yaml  ci.yaml
deploy/: README.md  crd.yaml  deployment.yaml  externalsecret.yaml  rbac.yaml
scripts/: ci.sh
src/openrouter_operator/: __init__.py  adapter.py  k8s.py  models.py  operator.py  ports.py  reconcile.py
tests/: test_reconcile.py
